[package]
name = "muta-demo"
version = "0.1.0"
authors = [ "Eason Gao <kaoimin@qq.com>" ]
edition = "2018"

[dependencies]
derive_more = "0.99"
serde = "1.0"
serde_json = "1.0"
smallvec = "1.5"

  [dependencies.muta]
  git = "https://github.com/nervosnetwork/muta"
  tag = "v0.2.1"

  [dependencies.protocol]
  git = "https://github.com/nervosnetwork/muta"
  tag = "v0.2.1"
  package = "muta-protocol"

  [dependencies.tokio]
  version = "0.2"
  features = [ "macros", "rt-core" ]

  [dependencies.asset]
  git = "https://github.com/nervosnetwork/muta"
  tag = "v0.2.1"

  [dependencies.metadata]
  path = "services/metadata"

  [dependencies.attestation]
  path = "services/attestation"

  [dependencies.lotterydraw]
  path = "services/lotterydraw"

[workspace]
members = [ "services/metadata" ]
